Added few css styling

--- a/Colors/index.html
+++ b/Colors/index.html
@@ -95,7 +95,7 @@
     <p>RGB has similar syntax, RGBA. </p>
     <p>Hex values can have an alpha value too, if it is a 6 digit value, the value ranges from 00(transparent) to FF(opaque)</p>
     <p>IF it is a 3 digit, add a value at the end.</p>
-    <p>Alpha cna only be used for HSL, RGB, Hex colors</p>
+    <p>Alpha can only be used for HSL, RGB, Hex colors</p>
     <p>there is a named color keyword for 0 opacity. "Transparent". Its same as RGBA(0,0,0,0), and to use it you do, color: transparent;</p>
 
 
